@startuml Nova Farma - Diagrama Entidad-Relación

!define ENTITY_COLOR #E3F2FD
!define PK_COLOR #4CAF50
!define FK_COLOR #FF9800

entity "PRODUCTOS" as productos ENTITY_COLOR {
    * id : INTEGER <<PK>> PK_COLOR
    --
    * nombre : VARCHAR(100)
    descripcion : TEXT
    * precio : NUMERIC(10,2)
    * stock : INTEGER
    fecha_vencimiento : DATE
    fecha_creacion : TIMESTAMP
    fecha_modificacion : TIMESTAMP
    activo : BOOLEAN
}

entity "USUARIOS" as usuarios ENTITY_COLOR {
    * id : INTEGER <<PK>> PK_COLOR
    --
    * username : VARCHAR(50) <<UNIQUE>>
    * password_hash : VARCHAR(64)
    * rol : VARCHAR(20)
    fecha_creacion : TIMESTAMP
}

entity "VENTAS" as ventas ENTITY_COLOR {
    * id : INTEGER <<PK>> PK_COLOR
    --
    * producto_id : INTEGER <<FK>> FK_COLOR
    * usuario_id : INTEGER <<FK>> FK_COLOR
    * cantidad : INTEGER
    * precio_unitario : NUMERIC(10,2)
    * total : NUMERIC(10,2)
    fecha_venta : TIMESTAMP
}

' Relaciones
productos ||--o{ ventas : "tiene"
usuarios ||--o{ ventas : "realiza"

note right of productos
  **Constraints:**
  - precio >= 0
  - stock >= 0
  - activo DEFAULT true
end note

note right of usuarios
  **Constraints:**
  - username UNIQUE
  - rol IN ('ADMINISTRADOR', 'TRABAJADOR')
end note

note right of ventas
  **Constraints:**
  - cantidad > 0
  **Trigger:**
  - actualizar_stock_venta()
    (actualiza stock automáticamente)
end note

@enduml

